<resources>
    <string name="app_name">Valve Timer</string>
    <string name="valve_off">Valve is off</string>
    <string name="turn_on">Turn valve On</string>
    <string name="edit_name_button">Edit Name Button</string>
    <string name="edit_default_length_button">Edit Default Timer Length</string>
    <string name="edit_auto_refresh_button">Edit Auto Refresh</string>
    <string name="auto_refresh_text_format">Auto Refresh: %d seconds</string>
    <string name="default_length_text_format">Default Length: %d minutes</string>
    <string name="valve_name_text_format">Valve Name: %s</string>
    <string name="default_valve_name">Valve</string>
    <string name="valve_name_label">Valve Name:</string>
    <string name="default_length_label">Default Length:</string>
    <string name="update_timer">Update Timer</string>
    <string name="valve_on_format">Valve On: %s</string>
    <string name="connecting">Connecting...</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="set_timer">Set Timer</string>
    <string name="stop">Stop</string>
    <string name="valve_offline">Valve Offline</string>
    <string name="offline_hours_format">Offline for %d hours</string>
    <string name="offline_one_hour">Offline for one hour</string>
    <string name="offline_minutes_format">Offline for %d:%02d</string>
</resources>
